--- a/style.css
+++ b/style.css
@@ -12,11 +12,33 @@ ul{
 input{
     display:none;
 }
+
+input, label, a{
+    cursor: pointer;
+}
+
 a[download] {
    text-decoration: none;
 }
-input, label, a{
-    cursor: pointer;
+
+a[download] > span{
+   position: relative;
+}
+
+@keyframes updown{
+  from {
+    top: -2px;
+  }
+
+  to {
+    top: 2px;
+  }
+}
+a[download]:hover > span{
+    animation-duration: 0.5s;
+    animation-name: updown;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
 
 /* Directory show-hide */
